--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -21,12 +21,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Generate feed
-        run: cd src && python main.py
+        run: make gen_feeds
 
       - name: Commit and push
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add axelera.xml
-          git commit -m "Update feed" || echo "No changes"
-          git push
+          make deploy_feeds
